--- a/contactus.html
+++ b/contactus.html
@@ -192,13 +192,13 @@
         <form action="https://formspree.io/f/xqkrnppe" method="POST">
             <h5>Contact Us</h5>
 
-            <input type="text" name="name" id="name" placeholder="Name">
+            <input type="text" name="name" id="name" placeholder="Name" required>
             <br>
-            <input type="tel" name="phone" id="Mobile" placeholder="Number">
+            <input type="tel" name="phone" id="Mobile" placeholder="Number" required>
             <br>
-            <input type="Email" name="email" id="email" placeholder="Email">
+            <input type="Email" name="email" id="email" placeholder="Email" required>
             <br>
-            <textarea name="Message" name="message" id="" cols="30" rows="4">Message</textarea>
+            <textarea name="Message" name="message" id="" cols="30" rows="4" required>Message</textarea>
             <br>
             <button type="submit">SEND</button>
         </form>
