--- a/index.html
+++ b/index.html
@@ -558,8 +558,10 @@
         <div class="contact">
             <h2>Contact</h2>
             <div id="contact">
+               <div id="contarct">
                 <i class="fa-solid fa-location-dot"></i>
                 <span id="register">Registered Office :</span>
+               </div>
                 <p class="register">A-204, Sunnidhi Park, Nr.PMC Bank, New Link Road, Vasai(East), Thane-401209.</p>
                 <i class="fa-solid fa-phone"></i>
                 <span id="mo">9320763716</span>
